force-app/main/default/objects/Git_Workflow__c/Git_Workflow__c.object-meta.xml
<CustomObject>
    <description>Git workflow</description>
    <label>Git Workflow</label>
    <nameField>
        <label>Git Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Git Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>