force-app/main/default/objects/Git_Workflow__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <description>Days</description>
    <inlineHelpText>Days</inlineHelpText>
    <label>Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Weekdays</valueSetName>
    </valueSet>
</CustomField>