force-app/main/default/objects/Git_Workflow__c/fields/Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>Dev_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dev Name</description>
    <inlineHelpText>Dev Name</inlineHelpText>
    <label>Dev Name</label>
    <type>Checkbox</type>
</CustomField>