force-app/main/default/objects/Git_Workflow__c/fields/Metadata__c.field-meta.xml
<CustomField>
    <fullName>Metadata__c</fullName>
    <label>Metadata</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Apex Class</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>Custom Feilds</fullName>
            </value>
            <value>
                <fullName>Custom Lable</fullName>
            </value>
            <value>
                <fullName>Custom Objects</fullName>
            </value>
            <value>
                <fullName>Custom Tab</fullName>
            </value>
            <value>
                <fullName>Flows</fullName>
            </value>
            <value>
                <fullName>Layouts</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>