force-app/main/default/objects/Git_Workflow__c/fields/Pull_Req__c.field-meta.xml
<CustomField>
    <fullName>Pull_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pull</description>
    <inlineHelpText>pull</inlineHelpText>
    <label>Pull Req</label>
    <type>Checkbox</type>
</CustomField>