force-app/main/default/objects/Git_Workflow__c/fields/Push_App__c.field-meta.xml
<CustomField>
    <fullName>Push_App__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Push Application</description>
    <inlineHelpText>Push Application</inlineHelpText>
    <label>Push App</label>
    <type>Checkbox</type>
</CustomField>