force-app/main/default/objects/Git_Workflow__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User Story</description>
    <inlineHelpText>User Story</inlineHelpText>
    <label>User Story</label>
    <type>Checkbox</type>
</CustomField>